added stats api
